--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -47,7 +47,16 @@ const flashOffers = [
         link: "https://amzn.to/3NfMKZm",
         img: "https://m.media-amazon.com/images/I/61zdXL7k6eL._AC_SX679_.jpg",
         discount: "-56%"
-    }
+    },
+    {
+        name: "Funda MagSafe iPhone 17",
+        desc: "Transparente, antigolpes y no amarillea. Protección total.",
+        price: 9.91,
+        oldPrice: 11.99,
+        link: "https://amzn.to/45FUw59",
+        img: "https://m.media-amazon.com/images/I/71n+zzkhJXL._AC_SX679_.jpg",
+        discount: "-17%"
+    },
 ];
 
 // Función de Puntuación (Psicológica)
